# drone-perimeter-surveillance

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml.GIT_RESTRICT  README.md  TESTING.md  format_python.sh  pyproject.toml  quick_test.bat  quick_test.sh  requirements-dev.txt  robot_desc.yaml  test_validation.ps1  test_validation.sh
.github/instructions/: Coding Guideline.instructions.md
archive/ros2_ws/src/drone/: package.xml
cad model/: Quadcopter.SLDASM  Quadcopter.STEP
cad model/archive/: README.md
cad model/archive/quadcopter/parts/: 1. spider-base.SLDPRT  3. spider-arm.SLDPRT  4. battery.SLDPRT  5. spinner.SLDPRT  6. spacer.SLDPRT  7. electrical connector.SLDPRT
cad/quadcopter/parts/: 2. spider-top.SLDPRT  8. piller.SLDPRT
docs/: README.md  claude-research-guide.md
docs/business_understanding/: 01. Introduction.md  02. Phase 1 - Research & Planning.md  Business Underestanding.md
ros2_ws/src/drone/: setup.py
src/detection/: README.md
src/quadcopter/: CMakeLists.txt  package.xml
src/quadcopter/config/: bridge_config.yaml  controllers.yaml  joint_names_Quadcopter.yaml  quadcopter_view.rviz
src/quadcopter/launch/: gazebo.launch.py
src/quadcopter/meshes/: base_link.STL  link_camera.STL  link_propeller_1.STL  link_propeller_2.STL  link_propeller_3.STL  link_propeller_4.STL
src/quadcopter/scripts/: simple_joint_state_publisher.py
src/quadcopter/urdf/: Quadcopter.csv  Quadcopter.urdf
src/quadcopter_simulation/: CMakeLists.txt  package.xml
src/quadcopter_simulation/config/: drone_controllers.yaml
src/quadcopter_simulation/launch/: full_simulation.launch.py  gazebo_sim.launch.py
src/quadcopter_simulation/rviz/: drone_config.rviz
src/quadcopter_simulation/scripts/: drone_controller.py  drone_teleop.py  drone_teleop_safe.py  test_motors.py  waypoint_follower.py
src/quadcopter_simulation/src/: drone_controller.cpp  drone_controller.cpp.backup
src/quadcopter_simulation/urdf/: quadcopter.urdf.xacro  quadcopter_complete.urdf  simple_quadcopter.urdf
src/quadcopter_simulation/worlds/: drone_world.sdf
