<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadcopter</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for quadcopter</p>
    <p>This package contains configuration data, 3D models and launch files
for quadcopter robot</p>
  </description>
  <author>Quadcopter Team</author>
  <maintainer email="admin@quadcopter.dev">Quadcopter Team</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
    <gazebo_ros gazebo_media_path="${prefix}/.."/>
  </export>
</package>